// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > displays with search button 1`] = `
<DocumentFragment>
  <div
    class="sc-iqkkDd kdRpNH aje-field__search is-medium"
  >
    <label
      class="sc-bdDsCe bLPJOA"
      id="react-aria-:r6:"
    >
      search
    </label>
    <div
      class="sc-qdQOe kPUMiD aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r6:"
        class="sc-gKkgUA bzpolP"
        id="react-aria-:r5:"
        tabindex="0"
        type="search"
        value=""
      />
      <button
        aria-label="search"
        class="sc-dYjPD sc-bqqMSY hHQCzc dIQBXN aje-btn aje-icon-btn aje-btn--content is-medium"
        data-icon-button="true"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-crPgjm bIBcHh aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > displays without button 1`] = `
<DocumentFragment>
  <div
    class="sc-iqkkDd kdRpNH aje-field__search is-medium"
  >
    <label
      class="sc-bdDsCe bLPJOA"
      id="react-aria-:r1:"
    >
      search
    </label>
    <div
      class="sc-qdQOe kPUMiD aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r1:"
        class="sc-gKkgUA bzpolP"
        id="react-aria-:r0:"
        tabindex="0"
        type="search"
        value=""
      />
      <button
        aria-label="search"
        class="sc-dYjPD sc-bqqMSY hHQCzc dIQBXN aje-btn aje-icon-btn aje-btn--content is-medium"
        data-icon-button="true"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-crPgjm bIBcHh aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
